added header, showcase and footer sections 22/06/18 comit

--- a/scss/modules/_colors.scss
+++ b/scss/modules/_colors.scss
@@ -4,10 +4,8 @@ $color-white: #f3f3f3;
 
 $color-black: #202020;
 
-$color-purple: #3F1B46;
-
-$color-brown: #4C3E33;
-
-$color-cream: #C2C5A1;
-
 $color-grey: #575555;
+
+$primary-color: #26265E;
+
+$primary-hover: #a1a1a8;
