--- a/css/main.css
+++ b/css/main.css
@@ -5,9 +5,10 @@ html, body {
   padding: 0;
   margin: 0;
   width: 100%;
-  height: 2000px;
+  height: auto;
   background-color: #f3f3f3;
-  color: #C2C5A1; }
+  color: #202020;
+  font-family: 'Montserrat', sans-serif; }
 
 .facebook_icon,
 .facebook_icon::before,
@@ -32,8 +33,8 @@ html, body {
   margin: 0;
   padding: 0;
   width: 100%;
-  background: sandybrown;
-  height: 60px;
+  background: #26265E;
+  height: 70px;
   z-index: 100;
   position: fixed; }
   .header_outer::after {
@@ -49,7 +50,7 @@ html, body {
   justify-content: space-between;
   align-items: center;
   width: auto;
-  height: 60px;
+  height: 65px;
   margin: 0;
   padding: 0;
   left: 1em; }
@@ -59,92 +60,300 @@ html, body {
   padding: 0;
   position: absolute;
   top: 0;
+  height: 0px;
   overflow: hidden; }
   .nav_outer ul {
     margin: 0 auto;
     list-style: none;
-    background: #575555;
     display: flex;
     flex-direction: column;
     height: 75vh;
-    width: 100vw; }
+    width: 100vw;
+    background: #26265E; }
     .nav_outer ul li {
       height: 100%;
       display: flex;
       justify-content: space-around;
       align-items: center;
-      border-bottom: 1px solid rgba(242, 242, 242, 0.295);
+      border-bottom: 1px solid #41415c;
       width: 100%;
       margin: 0 auto;
-      transition: 250ms ease-in-out; }
-      .nav_outer ul li:hover {
-        background: #706e6e; }
+      transition: 350ms ease-in-out; }
       .nav_outer ul li a {
         cursor: pointer;
-        display: block;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         position: relative;
         text-decoration: none;
         font-size: 1.5em;
         font-family: 'Montserrat', 'Sans serif';
         font-weight: 300;
         color: #f3f3f3;
-        margin: 0 10px;
-        padding: 15px; }
+        margin: 0;
+        padding: 0;
+        transition: 350ms ease-in-out;
+        width: 100%;
+        height: 100%;
+        opacity: 0; }
+        .nav_outer ul li a:hover {
+          background: #111129;
+          color: #f3f3f3;
+          transform: translate(0px, -10px); }
+        .nav_outer ul li a.is-showing {
+          opacity: 1;
+          transform: translateY(0px); }
     .nav_outer ul .active_link a {
       position: relative;
-      font-weight: 400;
-      color: #C2C5A1; }
+      font-weight: 700; }
 
 .nav_outer a::after,
 .nav_outer a::before {
-  transition: all 250ms; }
+  transition: all 350ms; }
 
 .nav_outer a::after {
   position: absolute;
-  bottom: 0;
+  bottom: 0.7em;
   left: 0;
   right: 0;
   margin: auto;
   width: 0%;
   content: '.';
   color: transparent;
-  background: #C2C5A1;
-  height: 1px; }
+  background: #a1a1a8;
+  height: 3px; }
 
 .nav_outer a:hover {
-  color: #C2C5A1; }
+  color: #a1a1a8; }
 
 .nav_outer a:hover::after {
-  width: 100%; }
+  width: 150px; }
+
+.nav_outer--open {
+  height: auto;
+  z-index: 1; }
 
 @media (min-width: 800px) {
   .header_outer {
-    background: #575555; }
+    background: #26265E; }
   .nav_outer {
     position: relative;
     margin: 0 auto;
-    height: 60px;
+    height: 70px;
     width: 100%; }
     .nav_outer ul {
       height: 100%;
       flex-direction: row;
       margin: 0 auto;
       background: none;
-      justify-content: center;
-      max-width: 600px;
+      justify-content: space-around;
+      max-width: 550px;
       padding: 0; }
-      .nav_outer ul li {
-        background: none; }
-        .nav_outer ul li:hover {
-          background: none; }
-        .nav_outer ul li a {
-          padding: 0;
-          height: 1.5em;
-          font-size: 1em;
-          background: saddlebrown;
-          width: 100%;
-          text-align: center;
-          margin: 0 1em; } }
+      .nav_outer ul li a {
+        opacity: 1;
+        padding: 0;
+        height: 100%;
+        font-size: 0.8em;
+        width: 100%;
+        margin: 0; }
+        .nav_outer ul li a:hover {
+          background: none;
+          transform: translate(0px, 0px); }
+  .nav_outer a::after {
+    bottom: 1em; }
+  .nav_outer a:hover::after {
+    width: 100%; }
+  #nav_icon {
+    display: none; } }
+
+#nav_icon {
+  width: 45px;
+  height: 30px;
+  position: absolute;
+  right: 1em;
+  top: 0.3em;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: 400ms ease-in-out;
+  -moz-transition: 400ms ease-in-out;
+  -o-transition: 400ms ease-in-out;
+  transition: 400ms ease-in-out;
+  cursor: pointer;
+  z-index: 2;
+  padding: 0.7em; }
+
+#nav_icon span {
+  display: block;
+  position: absolute;
+  height: 4px;
+  width: 77%;
+  border-radius: 5px;
+  opacity: 1;
+  left: 7px;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .4s ease-in-out;
+  -moz-transition: .4s ease-in-out;
+  -o-transition: .4s ease-in-out;
+  transition: .4s ease-in-out; }
+
+#nav_icon span:nth-child(1) {
+  top: 9px;
+  background-color: #f3f3f3; }
+
+#nav_icon span:nth-child(2) {
+  top: 24px;
+  background-color: #f3f3f3; }
+
+#nav_icon span:nth-child(3) {
+  top: 39px;
+  background-color: #f3f3f3; }
+
+#nav_icon.open {
+  background: none; }
+
+#nav_icon.open span:nth-child(1) {
+  top: 24px;
+  -webkit-transform: rotate(135deg);
+  -moz-transform: rotate(135deg);
+  -o-transform: rotate(135deg);
+  transform: rotate(135deg);
+  background: #f3f3f3; }
+
+#nav_icon.open span:nth-child(2) {
+  opacity: 0;
+  left: -60px; }
+
+#nav_icon.open span:nth-child(3) {
+  top: 24px;
+  -webkit-transform: rotate(-135deg);
+  -moz-transform: rotate(-135deg);
+  -o-transform: rotate(-135deg);
+  transform: rotate(-135deg);
+  background: #f3f3f3; }
+
+.footer {
+  position: relative;
+  bottom: 0;
+  background: #26265E;
+  width: 100%;
+  height: 12em;
+  font-family: 'Montserrat', sans-serif;
+  color: #f3f3f3;
+  text-align: center; }
+  .footer .social_media_footer {
+    position: relative;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    padding: 1.5em 0 0 0; }
+  .footer h1 {
+    font-size: 1.6em;
+    font-weight: 300; }
+  .footer p {
+    font-size: 0.7em;
+    font-weight: 200; }
+
+.showcase_outer {
+  position: relative;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  height: 100vh;
+  max-height: 1000px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: row; }
+
+.showcase_img {
+  position: absolute;
+  height: 1059px;
+  width: 100vw;
+  background-image: url(../images/showcase.jpeg);
+  background-size: cover;
+  background-position: top -200px center;
+  background-repeat: no-repeat; }
+
+.logo_outer {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background: rgba(30, 30, 73, 0.8);
+  width: 50%;
+  height: 100%;
+  padding: 0; }
+  .logo_outer .logo {
+    position: relative;
+    font-size: 7em;
+    font-weight: 300;
+    text-transform: uppercase;
+    color: #f3f3f3; }
+    .logo_outer .logo::before {
+      content: '';
+      position: absolute;
+      height: 10px;
+      width: 40%;
+      left: -0.9em;
+      top: 0.5em;
+      background: #f3f3f3;
+      transform: rotate(-90deg); }
+  .logo_outer .logo_name {
+    font-size: 3em;
+    font-weight: 500;
+    color: #f3f3f3; }
+
+.showcase_quote_box {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  padding: 0;
+  margin: 0;
+  justify-content: center;
+  align-items: center; }
+  .showcase_quote_box::before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(243, 243, 243, 0.3); }
+  .showcase_quote_box .showcase_quote {
+    position: relative;
+    padding: 0;
+    margin: 0;
+    font-size: 4em;
+    color: #26265E;
+    text-align: center;
+    max-width: 400px;
+    z-index: 1; }
+  .showcase_quote_box .showcase_cta {
+    color: #26265E;
+    z-index: 1;
+    margin-top: 1em;
+    font-size: 1.4em;
+    border: 3px solid #26265E;
+    padding: 0.5em 1em;
+    cursor: pointer;
+    text-decoration: none;
+    font-weight: 600;
+    transition: 250ms ease-in-out; }
+    .showcase_quote_box .showcase_cta:hover {
+      background: #26265E;
+      color: #f3f3f3; }
+
+.about {
+  position: relative;
+  width: 100%;
+  height: 800px; }
 
 /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
 /* Document
