--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -4,9 +4,10 @@ html, body{
     padding: 0;
     margin: 0;
     width: 100%;
-    height: 2000px;
+    height: auto;
     background-color: $color-white;
-    color: $color-cream;
+    color: $color-black;
+    font-family: 'Montserrat', sans-serif;
 }
 
 
