--- a/scss/partials/_nav.scss
+++ b/scss/partials/_nav.scss
@@ -3,8 +3,8 @@
     margin: 0;
     padding: 0;
     width: 100%;
-    background: sandybrown;
-    height: 60px;
+    background: $primary-color;
+    height: 70px;
     z-index: 100;
     position: fixed;
     &::after{
@@ -23,7 +23,7 @@
     justify-content: space-between;
     align-items: center;
     width: auto;
-    height: 60px;
+    height: 65px;
     margin: 0;
     padding: 0;
     left: 1em;
@@ -36,46 +36,60 @@
     padding: 0;
     position: absolute;
     top: 0;
-    //height: 0px;
+    height: 0px;
     overflow: hidden;
     ul{
         margin: 0 auto;
         list-style: none;
-        background: $color-grey;
+        //background: $primary-color;
         display: flex;
         flex-direction: column;
         height: 75vh;
         width: 100vw;
+        background: $primary-color;
         li{
             height: 100%;
             display: flex;
             justify-content: space-around;
             align-items: center;
-            border-bottom: 1px solid hsla(0, 0%, 95%, 0.295);
+            border-bottom: 1px solid #41415c;
             width: 100%;
             margin: 0 auto;
-            transition: 250ms ease-in-out;
-            &:hover{
-                background: #706e6e;
-            }
+            transition: 350ms ease-in-out;
             a{
                 cursor: pointer;
-                display: block;
+                display: flex;
+                justify-content: center;
+                align-items: center;
                 position: relative;
                 text-decoration: none;
+                //text-align: center;
                 font-size: 1.5em;
                 font-family: 'Montserrat', 'Sans serif';
                 font-weight: 300;
                 color: $color-white;
-                margin: 0 10px;
-                padding: 15px;
+                margin: 0;
+                padding: 0;
+                transition: 350ms ease-in-out;
+                width: 100%;
+                height: 100%;
+                opacity: 0;
+                &:hover{
+                    background: #111129;
+                    color: $color-white;
+                    transform: translate(0px, -10px);
+                }
+                &.is-showing{
+                    opacity: 1;
+                    transform: translateY(0px);
+                }
             }
         }
         .active_link{
             a{
                 position: relative;
-                font-weight: 400;
-                color: $color-cream;
+                font-weight: 700;
+                //color: $primary-hover;
             }
         }
     }
@@ -84,60 +98,158 @@
 // Nav link hover effect
 .nav_outer a::after,
 .nav_outer a::before{
-    transition: all 250ms;
+    transition: all 350ms;
 }
 .nav_outer a::after{
     position: absolute;
-    bottom: 0;
+    bottom: 0.7em;
     left: 0;
     right: 0;
     margin: auto;
     width: 0%;
     content: '.';
     color: transparent;
-    background: $color-cream;
-    height: 1px;
+    background: $primary-hover;
+    height: 3px;
 }
 .nav_outer a:hover{
-    color: $color-cream;
+    color: $primary-hover;
 }
 .nav_outer a:hover::after{
-    width: 100%;
+    width: 150px;
+}
+.nav_outer--open{
+    height: auto;
+    z-index: 1;
 }
 
 // Desktop menu
 @media (min-width: 800px){
     .header_outer{
-        background: $color-grey;
+        background: $primary-color;
     }
     .nav_outer{
         position: relative;
         margin: 0 auto;
-        height: 60px;
+        height: 70px;
         width: 100%;
         ul{
             height: 100%;
             flex-direction: row;
             margin: 0 auto;
             background: none;
-            justify-content: center;
-            max-width: 600px;
+            justify-content: space-around;
+            max-width: 550px;
             padding: 0;
             li{
-                background: none;
-                &:hover{
-                    background: none;
-                }
+                //background: cadetblue;
                 a{
+                    opacity: 1;
                     padding: 0;
-                    height: 1.5em;
-                    font-size: 1em;
-                    background: saddlebrown;
+                    height: 100%;
+                    font-size: 0.8em;
+                    //background: saddlebrown;
                     width: 100%;
-                    text-align: center;
-                    margin: 0 1em;
+                    //text-align: center;
+                    margin: 0;
+                    &:hover{
+                        background: none;
+                        transform: translate(0px, 0px);
+                        //color: $primary-hover;
+                    }
                 }
             }
         }
     }
+    .nav_outer a::after{
+        //background: none;
+        bottom: 1em;
+    }
+    .nav_outer a:hover::after{
+        width: 100%;
+    }
+    #nav_icon{
+        display: none;
+    }
+}
+
+
+
+
+
+// NAV ICON //
+#nav_icon{
+    
+    width: 45px;
+    height: 30px;
+    position: absolute;
+    right: 1em;
+    top: 0.3em;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: 400ms ease-in-out;
+    -moz-transition: 400ms ease-in-out;
+    -o-transition: 400ms ease-in-out;
+    transition: 400ms ease-in-out;
+    cursor: pointer;
+    z-index: 2;
+    //background: #272727;
+    padding: 0.7em;
+}
+#nav_icon span{
+    display: block;
+    position: absolute;
+    height: 4px;
+    width: 77%;
+    border-radius: 5px;
+    opacity: 1;
+    left: 7px;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .4s ease-in-out;
+    -moz-transition: .4s ease-in-out;
+    -o-transition: .4s ease-in-out;
+    transition: .4s ease-in-out;
+}
+#nav_icon span:nth-child(1) {
+    top: 9px;
+    background-color: $color-white;
+    //border: 3px solid rgba(0, 112, 0, 0.8);
+}
+#nav_icon span:nth-child(2) {
+    top: 24px;
+    background-color: $color-white;
+    //border: 3px solid rgba(0, 112, 0, 0.8);
+}
+#nav_icon span:nth-child(3) {
+    top: 39px;
+    background-color: $color-white;
+    //border: 3px solid rgba(0, 112, 0, 0.8);
+}
+#nav_icon.open{
+    background: none;
+}
+#nav_icon.open span:nth-child(1) {
+    top: 24px;
+    -webkit-transform: rotate(135deg);
+    -moz-transform: rotate(135deg);
+    -o-transform: rotate(135deg);
+    transform: rotate(135deg);
+    background: $color-white;
+}
+#nav_icon.open span:nth-child(2) {
+    opacity: 0;
+    left: -60px;
+}
+#nav_icon.open span:nth-child(3) {
+    top: 24px;
+    -webkit-transform: rotate(-135deg);
+    -moz-transform: rotate(-135deg);
+    -o-transform: rotate(-135deg);
+    transform: rotate(-135deg);
+    background: $color-white;
 }
