--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -5,7 +5,7 @@ html, body{
     margin: 0;
     width: 100%;
     height: auto;
-    background-color: $color-white;
+    background-color: $primary-color;
     color: $color-black;
     font-family: 'Montserrat', sans-serif;
 }
