--- a/scss/partials/_about.scss
+++ b/scss/partials/_about.scss
@@ -2,5 +2,20 @@
     position: relative;
     width: 100%;
     height: 800px;
-    
+    background: $color-white;
+    color: $primary-color;
+    padding: 2em 0;
+    margin: 0;
+    h1{
+        font-size: $section-header;
+        font-weight: 600;
+        text-align: center;
+    }
+    p{
+        text-align: center;
+        max-width: 1000px;
+        margin: 0 auto;
+        padding: 0 10%;
+        font-size: 1.2em;
+    }
 }
