--- a/css/main.css
+++ b/css/main.css
@@ -467,17 +467,38 @@ html, body {
       height: 400px;
       padding: 0;
       box-sizing: border-box;
-      background-image: url(../images/showcase.jpg);
-      background-size: cover;
-      background-position: top 3em center;
+      overflow: hidden;
+      position: relative;
       border: 5px solid #f3f3f3; }
+      .services .services_flexbox .service .service_bg {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        background-size: cover;
+        background-position: top center;
+        background-repeat: no-repeat;
+        transition: 300ms ease-in-out; }
+        .services .services_flexbox .service .service_bg:hover,
+        .services .services_flexbox .service .service_bg :active,
+        .services .services_flexbox .service .service_bg :focus {
+          transform: scale(1.15); }
+        .services .services_flexbox .service .service_bg::before {
+          position: absolute;
+          content: '';
+          height: 100%;
+          width: 100%; }
       .services .services_flexbox .service h2 {
+        position: absolute;
+        height: auto;
+        width: 100%;
+        top: 0;
         font-size: 1.5em;
         font-weight: 500;
         text-align: center;
         background: #26265E;
         padding: 1em 0;
-        margin: 0; }
+        margin: 0;
+        z-index: 1; }
     .services .services_flexbox .rendering {
       background-image: url(../images/rendering.jpg); }
     .services .services_flexbox .drives {
@@ -487,11 +508,9 @@ html, body {
     .services .services_flexbox .cladding {
       background-image: url(../images/cladding.jpg); }
     .services .services_flexbox .lanterns {
-      background-image: url(../images/lanterns.jpg);
-      background-position: top -50px center; }
+      background-image: url(../images/lanterns.jpg); }
     .services .services_flexbox .building {
-      background-image: url(../images/building.jpg);
-      background-position: top -55px center; }
+      background-image: url(../images/building.jpg); }
 
 /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
 /* Document
