--- a/scss/partials/_services.scss
+++ b/scss/partials/_services.scss
@@ -31,17 +31,44 @@
             padding: 0;
             box-sizing: border-box;
             //margin: 1em;
-            background-image: url(../images/showcase.jpg);
-            background-size: cover;
-            background-position: top 3em center;
+            overflow: hidden;
+            position: relative;
             border: 5px solid #f3f3f3;
+            .service_bg{
+                width: 100%;
+                height: 100%;
+                position: relative;
+                //background-image: url(../images/showcase.jpg);
+                background-size: cover;
+                background-position: top center;
+                background-repeat: no-repeat;
+                transition: 300ms ease-in-out;
+                &:hover,
+                :active,
+                :focus{
+                    transform: scale(1.15);
+                }
+                &::before{
+                    position: absolute;
+                    content: '';
+                    height: 100%;
+                    width: 100%;
+                    //background: rgba(38, 38, 94, 0.8);
+                }
+            }
             h2{
+                position: absolute;
+                height: auto;
+                width: 100%;
+                top: 0;
                 font-size: 1.5em;
                 font-weight: 500;
                 text-align: center;
                 background: $primary-color;
                 padding: 1em 0;
                 margin: 0;
+                //background: saddlebrown;
+                z-index: 1;
             }
         }
         .rendering{
@@ -58,11 +85,11 @@
         }
         .lanterns{
             background-image: url(../images/lanterns.jpg);
-            background-position: top -50px center
+            //background-position: top center
         }
         .building{
             background-image: url(../images/building.jpg);
-            background-position: top -55px center
-        }
+            //background-position: top -2em center;
+        } 
     }
 }
