--- a/scss/partials/_services.scss
+++ b/scss/partials/_services.scss
@@ -15,8 +15,8 @@
         font-weight: 500;
     }
     .services_flexbox{
-        width: 100%;
-        max-width: 1200px;
+        width: 90%;
+        max-width: 1000px;
         height: auto;
         padding: 0;
         margin: 0 auto;
@@ -24,23 +24,26 @@
         justify-content: space-around;
         align-items: stretch;
         flex-wrap: wrap;
-        //flex-direction: row;
         .service{
-            width: 50%;
-            height: 400px;
+            width: 100%;
+            height: auto;
             padding: 0;
+            margin: 1em 0;
             box-sizing: border-box;
             //margin: 1em;
             overflow: hidden;
             position: relative;
-            border: 5px solid #f3f3f3;
+            //border: 5px solid #f3f3f3;
+            display: flex;
+            flex-direction: row;
+            border-radius: 5px;
             .service_bg{
-                width: 100%;
+                width: 60%;
                 height: 100%;
                 position: relative;
                 //background-image: url(../images/showcase.jpg);
                 background-size: cover;
-                background-position: top center;
+                background-position: center;
                 background-repeat: no-repeat;
                 transition: 300ms ease-in-out;
                 &:hover,
@@ -53,24 +56,55 @@
                     content: '';
                     height: 100%;
                     width: 100%;
-                    //background: rgba(38, 38, 94, 0.8);
+                    //background: rgba(38, 38, 94, 0.3);
                 }
             }
-            h2{
-                position: absolute;
+            .service_text{
+                position: relatives;
                 height: auto;
-                width: 100%;
+                width: 40%;
+                height: 100%;
                 top: 0;
-                font-size: 1.5em;
-                font-weight: 500;
-                text-align: center;
-                background: $primary-color;
+                background: $color-white;
                 padding: 1em 0;
                 margin: 0;
+                color: $primary-color;
                 //background: saddlebrown;
                 z-index: 1;
+                box-shadow: inset 0px 0px 10px 3px rgba(0, 0, 0, 0.5);
+                box-sizing: border-box;
+                h2{
+                    font-size: 1.5em;
+                    font-weight: 700;
+                    text-align: center;
+                    padding: 0.5em 1em;
+                    margin: 0;
+                    color: $primary-color;
+                }
+                li{
+                    text-align: center;
+                    font-size: 1em;
+                    font-weight: 500;
+                    padding: 1em;
+                    margin: 0 auto;
+                }
             }
         }
+
+
+// Custom/ Spcific Classes        
+.flex_end{
+    flex-flow: row-reverse;
+}
+.line_break{
+    position: relative;
+    height: 1px;
+    width: 80%;
+    margin: 0 auto;
+    padding: 0;
+    background: $primary-color;
+}
+
         .rendering{
             background-image: url(../images/rendering.jpg);
         }
@@ -85,11 +119,10 @@
         }
         .lanterns{
             background-image: url(../images/lanterns.jpg);
-            //background-position: top center
         }
         .building{
             background-image: url(../images/building.jpg);
-            //background-position: top -2em center;
+            
         } 
     }
 }
