--- a/scss/modules/_colors.scss
+++ b/scss/modules/_colors.scss
@@ -6,7 +6,7 @@ $color-black: #202020;
 
 $color-grey: #575555;
 
-$primary-color: #26265E;
+$primary-color: #26265e;
 
 //$primary-color: hsl(240, 42%, 26%);
 
