--- a/scss/partials/_our_work.scss
+++ b/scss/partials/_our_work.scss
@@ -1,7 +1,8 @@
 .our_work{
-    margin: 0;
+    width: 90%;
+    margin: 0 auto;
     padding: 0;
     position: relative;
-    background: skyblue;
+    background: $color-white;
     height: 600px;
 }
