--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,26 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,900|Spectral+SC:200,300,400,500,600,700");
-html, body {
+body {
   font-size: 16px;
   z-index: 0;
   padding: 0;
   margin: 0;
   width: 100%;
   height: auto;
-  background-color: #26265E;
   color: #202020;
-  font-family: 'Montserrat', sans-serif; }
+  font-family: 'Montserrat', sans-serif;
+  position: relative; }
+
+.body_outer {
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background-image: url(../images/grey_bg.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin: 0;
+  z-index: 0;
+  position: fixed; }
 
 .facebook_icon,
 .facebook_icon::before,
@@ -30,17 +42,13 @@ html, body {
 
 .header_outer {
   top: 0;
-  margin: 0;
+  margin: 0 auto 0 5%;
   padding: 0;
-  width: 100%;
-  background: #26265E;
+  width: 90%;
+  background: #26265e;
   height: 70px;
   z-index: 100;
   position: fixed; }
-  .header_outer::after {
-    content: '';
-    clear: both;
-    display: block; }
 
 .social_media_outer {
   z-index: 100;
@@ -69,7 +77,7 @@ html, body {
     flex-direction: column;
     height: 75vh;
     width: 100vw;
-    background: #26265E; }
+    background: #26265e; }
     .nav_outer ul li {
       height: 100%;
       display: flex;
@@ -120,11 +128,11 @@ html, body {
   width: 0%;
   content: '.';
   color: transparent;
-  background: #a1a1a8;
+  background: #f3f3f3;
   height: 3px; }
 
 .nav_outer a:hover {
-  color: #a1a1a8; }
+  color: #f3f3f3; }
 
 .nav_outer a:hover::after {
   width: 150px; }
@@ -135,11 +143,12 @@ html, body {
 
 @media (min-width: 800px) {
   .header_outer {
-    background: #26265E; }
+    background: #26265e;
+    height: 100px; }
   .nav_outer {
     position: relative;
     margin: 0 auto;
-    height: 70px;
+    height: 100px;
     width: 100%; }
     .nav_outer ul {
       height: 100%;
@@ -153,7 +162,7 @@ html, body {
         opacity: 1;
         padding: 0;
         height: 100%;
-        font-size: 0.8em;
+        font-size: 0.9em;
         width: 100%;
         margin: 0; }
         .nav_outer ul li a:hover {
@@ -238,13 +247,14 @@ html, body {
 
 .footer {
   position: relative;
-  bottom: 0;
-  background: #26265E;
-  width: 100%;
-  height: 12em;
+  bottom: 3em;
+  background: #26265e;
+  width: 90%;
+  height: 11em;
   font-family: 'Montserrat', sans-serif;
   color: #f3f3f3;
-  text-align: center; }
+  text-align: center;
+  margin: 0 auto; }
   .footer .social_media_footer {
     position: relative;
     margin: 0 auto;
@@ -260,11 +270,12 @@ html, body {
 
 .showcase_outer {
   position: relative;
-  width: 100%;
+  top: 100px;
+  width: 90%;
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
   height: 100vh;
-  max-height: 1000px;
+  max-height: 900px;
   overflow: hidden;
   display: flex;
   flex-direction: row; }
@@ -285,7 +296,7 @@ html, body {
     right: 0;
     bottom: 0;
     left: 0;
-    background: rgba(255, 255, 255, 0.2); }
+    background: rgba(11, 22, 68, 0.6); }
 
 .logo_outer {
   position: relative;
@@ -297,6 +308,9 @@ html, body {
   width: 50%;
   height: 100%;
   padding: 0;
+  margin: -70px 0 0 0;
+  margin-left: -0.5em;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.6);
   -webkit-clip-path: polygon(0 0, 0 100%, 60% 100%, 60% 70%, 100% 70%, 100% 40%, 30% 0);
   clip-path: polygon(0 0, 0 100%, 60% 100%, 60% 70%, 100% 70%, 100% 40%, 30% 0); }
   .logo_outer .logo_primo {
@@ -336,67 +350,70 @@ html, body {
   .showcase_quote_box .showcase_quote {
     position: relative;
     padding: 0;
-    margin: 0;
+    margin: -100px  0 0 0;
     font-size: 4em;
-    color: #26265E;
+    color: #f3f3f3;
     text-align: center;
     max-width: 400px;
     z-index: 1;
-    font-weight: 700;
+    font-weight: 100;
     text-align: right; }
   .showcase_quote_box .showcase_cta {
-    color: #26265E;
+    color: #f3f3f3;
     z-index: 1;
     margin-top: 1em;
     font-size: 1.4em;
-    border: 3px solid #26265E;
+    border: 2px solid #f3f3f3;
     padding: 0.5em 1em;
     cursor: pointer;
     text-decoration: none;
-    font-weight: 600;
-    transition: 150ms ease-in-out;
-    margin-left: 7.5em; }
+    font-weight: 300;
+    transition: 350ms ease-in-out;
+    margin-left: 7.5em;
+    background: #26265e; }
     .showcase_quote_box .showcase_cta:hover {
-      background: #26265E;
-      color: #f3f3f3; }
+      background: #f3f3f3;
+      color: #26265e; }
 
 .about {
   position: relative;
-  width: 100%;
+  width: 90%;
   height: 800px;
   background: #f3f3f3;
-  color: #26265E;
+  color: #26265e;
   padding: 2em 0;
-  margin: 0; }
+  margin: 0 auto; }
   .about h1 {
     font-size: 3em;
-    font-weight: 600;
+    font-weight: 300;
     text-align: center; }
   .about p {
     text-align: center;
     max-width: 1000px;
     margin: 0 auto;
     padding: 0 10%;
-    font-size: 1.2em; }
+    font-size: 1.2em;
+    font-weight: 300; }
 
 .contact {
-  width: 100%;
+  width: 90%;
   height: 500px;
   background: #f3f3f3;
   position: relative;
   padding: 3em 0;
-  margin: 0;
-  color: #26265E; }
+  margin: 0 auto;
+  color: #26265e; }
   .contact h1 {
     font-size: 3em;
     text-align: center;
-    font-weight: 600;
+    font-weight: 200;
     margin: 0;
     padding: 0.5em 0; }
   .contact h2 {
     font-size: 1.5em;
     text-align: center;
-    margin: 3em 20%; }
+    margin: 3em 20%;
+    font-weight: 400; }
   .contact .contact_outer {
     height: 200px;
     width: 90%;
@@ -414,15 +431,15 @@ html, body {
       justify-content: space-evenly;
       align-items: center; }
       .contact .contact_outer .contact_box .contact_icon {
-        width: 80px;
-        height: 80px;
+        width: 60px;
+        height: 60px;
         background-image: url(../images/mail_icon_1.png);
-        background-size: 80px 80px;
+        background-size: 60px 60px;
         background-position: center;
         transition: 250ms ease-in-out; }
       .contact .contact_outer .contact_box p {
-        font-size: 1.3em;
-        font-weight: 600;
+        font-size: 1em;
+        font-weight: 500;
         text-align: center; }
       .contact .contact_outer .contact_box .email_icon {
         background-image: url(../images/mail_icon_1.png); }
@@ -438,22 +455,22 @@ html, body {
           background-image: url(../images/location_icon_2.png); }
 
 .services {
-  width: 100%;
+  width: 90%;
   height: auto;
   padding: 0;
-  margin: 0;
-  background: #26265E;
+  margin: 0 auto;
+  background: #f3f3f3;
   position: relative;
   padding: 3em 0 0 0;
-  color: #f3f3f3; }
+  color: #26265e; }
   .services h1 {
     font-size: 3em;
     margin: 0 auto;
     padding: 1em 0;
     text-align: center;
-    font-weight: 500; }
+    font-weight: 300; }
   .services .services_flexbox {
-    width: 90%;
+    width: 80%;
     max-width: 1000px;
     height: auto;
     padding: 0;
@@ -462,11 +479,13 @@ html, body {
     justify-content: space-around;
     align-items: stretch;
     flex-wrap: wrap; }
+    .services .services_flexbox .service:nth-of-type(even) {
+      flex-flow: row-reverse; }
     .services .services_flexbox .service {
       width: 100%;
       height: auto;
       padding: 0;
-      margin: 1em 0;
+      margin: 2em 0;
       box-sizing: border-box;
       overflow: hidden;
       position: relative;
@@ -474,17 +493,21 @@ html, body {
       flex-direction: row;
       border-radius: 5px; }
       .services .services_flexbox .service .service_bg {
-        width: 60%;
+        width: 55%;
         height: 100%;
         position: relative;
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        transition: 300ms ease-in-out; }
+        transition: 200ms ease-in-out;
+        transform: scale(1);
+        box-sizing: border-box;
+        margin: 0; }
         .services .services_flexbox .service .service_bg:hover,
         .services .services_flexbox .service .service_bg :active,
         .services .services_flexbox .service .service_bg :focus {
-          transform: scale(1.15); }
+          transform: scale(0.95);
+          box-shadow: inset 0px 0px 10px 1px rgba(0, 0, 0, 0.75); }
         .services .services_flexbox .service .service_bg::before {
           position: absolute;
           content: '';
@@ -493,38 +516,35 @@ html, body {
       .services .services_flexbox .service .service_text {
         position: relatives;
         height: auto;
-        width: 40%;
+        width: 45%;
         height: 100%;
         top: 0;
-        background: #f3f3f3;
         padding: 1em 0;
         margin: 0;
-        color: #26265E;
+        color: #26265e;
         z-index: 1;
-        box-shadow: inset 0px 0px 10px 3px rgba(0, 0, 0, 0.5);
         box-sizing: border-box; }
         .services .services_flexbox .service .service_text h2 {
-          font-size: 1.5em;
-          font-weight: 700;
+          font-size: 1.2em;
+          font-weight: 500;
           text-align: center;
           padding: 0.5em 1em;
           margin: 0;
-          color: #26265E; }
+          color: #26265e; }
         .services .services_flexbox .service .service_text li {
           text-align: center;
           font-size: 1em;
-          font-weight: 500;
-          padding: 1em;
-          margin: 0 auto; }
-    .services .services_flexbox .flex_end {
-      flex-flow: row-reverse; }
+          font-weight: 300;
+          padding: 0.5em 2em;
+          margin: 0 auto;
+          color: #8a8a8a; }
     .services .services_flexbox .line_break {
       position: relative;
       height: 1px;
-      width: 80%;
-      margin: 0 auto;
+      width: 60%;
+      margin: 1em auto;
       padding: 0;
-      background: #26265E; }
+      background: #26265e; }
     .services .services_flexbox .rendering {
       background-image: url(../images/rendering.jpg); }
     .services .services_flexbox .drives {
@@ -539,10 +559,11 @@ html, body {
       background-image: url(../images/building.jpg); }
 
 .our_work {
-  margin: 0;
+  width: 90%;
+  margin: 0 auto;
   padding: 0;
   position: relative;
-  background: skyblue;
+  background: #f3f3f3;
   height: 600px; }
 
 /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
