--- a/scss/partials/_about.scss
+++ b/scss/partials/_about.scss
@@ -1,14 +1,14 @@
 .about{
     position: relative;
-    width: 100%;
+    width: 90%;
     height: 800px;
     background: $color-white;
     color: $primary-color;
     padding: 2em 0;
-    margin: 0;
+    margin: 0 auto;
     h1{
         font-size: $section-header;
-        font-weight: 600;
+        font-weight: 300;
         text-align: center;
     }
     p{
@@ -17,5 +17,6 @@
         margin: 0 auto;
         padding: 0 10%;
         font-size: 1.2em;
+        font-weight: 300;
     }
 }
