--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -1,15 +1,28 @@
-html, body{
+body{
     font-size: 16px;
     z-index: 0;
     padding: 0;
     margin: 0;
     width: 100%;
     height: auto;
-    background-color: $primary-color;
     color: $color-black;
     font-family: 'Montserrat', sans-serif;
+    position: relative;
 }
-
+.body_outer{
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background-image: url(../images/grey_bg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin: 0;
+    z-index: 0;
+    //background: $primary-color;
+    //position: absolute;
+    position: fixed;
+}
 
 // Facebook icon
 .facebook_icon,
