--- a/scss/partials/_contact.scss
+++ b/scss/partials/_contact.scss
@@ -1,16 +1,16 @@
 .contact{
-    width: 100%;
+    width: 90%;
     height: 500px;
     background: $color-white;
     position: relative;
     padding: 3em 0;
-    margin: 0;
+    margin: 0 auto;
     color: $primary-color;
     h1{
         font-size: $section-header;
         
         text-align: center;
-        font-weight: 600;
+        font-weight: 200;
         margin: 0;
         padding: 0.5em 0;
     }
@@ -18,6 +18,7 @@
         font-size: 1.5em;
         text-align: center;
         margin: 3em 20%;
+        font-weight: 400;
     }
     .contact_outer{
         //background: salmon;
@@ -38,16 +39,16 @@
             align-items: center;
             //background: cadetblue;
             .contact_icon{
-                width: 80px;
-                height: 80px;
+                width: 60px;
+                height: 60px;
                 background-image: url(../images/mail_icon_1.png);
-                background-size: 80px 80px;
+                background-size: 60px 60px;
                 background-position: center;
                 transition: 250ms ease-in-out;
             }
             p{
-                font-size: 1.3em;
-                font-weight: 600;
+                font-size: 1em;
+                font-weight: 500;
                 text-align: center;
             }
             .email_icon{
