--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -1,12 +1,13 @@
 .footer{
     position: relative;
-    bottom: 0;
+    bottom: 3em;
     background: $primary-color;
-    width: 100%;
-    height: 12em;
+    width: 90%;
+    height: 11em;
     font-family: 'Montserrat', sans-serif;
     color: $color-white;
     text-align: center;
+    margin: 0 auto;
     .social_media_footer{
         //background: salmon;
         position: relative;
