--- a/scss/partials/_nav.scss
+++ b/scss/partials/_nav.scss
@@ -1,17 +1,13 @@
 .header_outer{
     top: 0;
-    margin: 0;
+    margin: 0 auto 0 5%;
     padding: 0;
-    width: 100%;
+    width: 90%;
     background: $primary-color;
     height: 70px;
     z-index: 100;
     position: fixed;
-    &::after{
-        content: '';
-        clear: both;
-        display: block;
-    }
+   
 }
 
 // social media outer
@@ -109,11 +105,11 @@
     width: 0%;
     content: '.';
     color: transparent;
-    background: $primary-hover;
+    background: $color-white;
     height: 3px;
 }
 .nav_outer a:hover{
-    color: $primary-hover;
+    color: $color-white;
 }
 .nav_outer a:hover::after{
     width: 150px;
@@ -127,11 +123,12 @@
 @media (min-width: 800px){
     .header_outer{
         background: $primary-color;
+        height: 100px;
     }
     .nav_outer{
         position: relative;
         margin: 0 auto;
-        height: 70px;
+        height: 100px;
         width: 100%;
         ul{
             height: 100%;
@@ -147,7 +144,7 @@
                     opacity: 1;
                     padding: 0;
                     height: 100%;
-                    font-size: 0.8em;
+                    font-size: 0.9em;
                     //background: saddlebrown;
                     width: 100%;
                     //text-align: center;
