--- a/scss/partials/_services.scss
+++ b/scss/partials/_services.scss
@@ -1,21 +1,21 @@
 .services{
-    width: 100%;
+    width: 90%;
     height: auto;
     padding: 0;
-    margin: 0;
-    background: $primary-color;
+    margin: 0 auto;
+    background: $color-white;
     position: relative;
     padding: 3em 0 0 0;
-    color: $color-white;
+    color: $primary-color;
     h1{
         font-size: $section-header;
         margin: 0 auto;
         padding: 1em 0;
         text-align: center;
-        font-weight: 500;
+        font-weight: 300;
     }
     .services_flexbox{
-        width: 90%;
+        width: 80%;
         max-width: 1000px;
         height: auto;
         padding: 0;
@@ -24,11 +24,14 @@
         justify-content: space-around;
         align-items: stretch;
         flex-wrap: wrap;
+        .service:nth-of-type(even){
+            flex-flow: row-reverse;
+        }
         .service{
             width: 100%;
             height: auto;
             padding: 0;
-            margin: 1em 0;
+            margin: 2em 0;
             box-sizing: border-box;
             //margin: 1em;
             overflow: hidden;
@@ -38,18 +41,22 @@
             flex-direction: row;
             border-radius: 5px;
             .service_bg{
-                width: 60%;
+                width: 55%;
                 height: 100%;
                 position: relative;
                 //background-image: url(../images/showcase.jpg);
                 background-size: cover;
                 background-position: center;
                 background-repeat: no-repeat;
-                transition: 300ms ease-in-out;
+                transition: 200ms ease-in-out;
+                transform: scale(1.0);
+                box-sizing: border-box;
+                margin: 0;
                 &:hover,
                 :active,
                 :focus{
-                    transform: scale(1.15);
+                    transform: scale(0.95);
+                    box-shadow: inset 0px 0px 10px 1px rgba(0,0,0,0.75);
                 }
                 &::before{
                     position: absolute;
@@ -62,20 +69,20 @@
             .service_text{
                 position: relatives;
                 height: auto;
-                width: 40%;
+                width: 45%;
                 height: 100%;
                 top: 0;
-                background: $color-white;
+                //background: rgba(38, 38, 94, 0.07);
                 padding: 1em 0;
                 margin: 0;
                 color: $primary-color;
                 //background: saddlebrown;
                 z-index: 1;
-                box-shadow: inset 0px 0px 10px 3px rgba(0, 0, 0, 0.5);
+                //box-shadow: inset 0px 0px 10px 3px rgba(0, 0, 0, 0.5);
                 box-sizing: border-box;
                 h2{
-                    font-size: 1.5em;
-                    font-weight: 700;
+                    font-size: 1.2em;
+                    font-weight: 500;
                     text-align: center;
                     padding: 0.5em 1em;
                     margin: 0;
@@ -84,23 +91,21 @@
                 li{
                     text-align: center;
                     font-size: 1em;
-                    font-weight: 500;
-                    padding: 1em;
+                    font-weight: 300;
+                    padding: 0.5em 2em;
                     margin: 0 auto;
+                    color: #8a8a8a;
                 }
             }
         }
 
 
 // Custom/ Spcific Classes        
-.flex_end{
-    flex-flow: row-reverse;
-}
 .line_break{
     position: relative;
     height: 1px;
-    width: 80%;
-    margin: 0 auto;
+    width: 60%;
+    margin: 1em auto;
     padding: 0;
     background: $primary-color;
 }
