--- a/scss/partials/_showcase.scss
+++ b/scss/partials/_showcase.scss
@@ -1,13 +1,17 @@
 .showcase_outer{
     position: relative;
-    width: 100%;
+    top: 100px;
+    width: 90%;
     padding: 0;
-    margin: 0;
+    margin: 0 auto;
     height: 100vh;
-    max-height: 1000px;
+    max-height: 900px;
     overflow: hidden;
     display: flex;
     flex-direction: row;
+    //border: 1px solid #f3f3f3;
+    //border-bottom: none;
+    //box-sizing: border-box;
 }
 
 .showcase_img{
@@ -26,7 +30,7 @@
         right: 0;
         bottom: 0;
         left: 0;
-        background: rgba(255, 255, 255, 0.2);
+        background: rgba(11, 22, 68, 0.6);
     }
 }
 .logo_outer{
@@ -36,10 +40,13 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background: rgba(38, 38, 94, 1);
+    background: $primary-color;
     width: 50%;
     height: 100%;
     padding: 0;
+    margin: -70px 0 0 0;
+    margin-left: -0.5em;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.6);
     //-webkit-clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 55%, 80% 55%, 80% 45%, 100% 45%, 100% 0%);
     //clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 55%, 80% 55%, 80% 45%, 100% 45%, 100% 0%);
     -webkit-clip-path: polygon(0 0, 0 100%, 60% 100%, 60% 70%, 100% 70%, 100% 40%, 30% 0);
@@ -88,30 +95,31 @@
     .showcase_quote{
         position: relative;
         padding: 0;
-        margin: 0;
+        margin: -100px  0 0 0;
         font-size: 4em;
-        color: $primary-color;
+        color: $color-white;
         text-align: center;
         max-width: 400px;
         z-index: 1;
-        font-weight: 700;
+        font-weight: 100;
         text-align: right;
     }
     .showcase_cta{
-        color: $primary-color;
+        color: $color-white;
         z-index: 1;
         margin-top: 1em;
         font-size: 1.4em;
-        border: 3px solid $primary-color;
+        border: 2px solid $color-white;
         padding: 0.5em 1em;
         cursor: pointer;
         text-decoration: none;
-        font-weight: 600;
-        transition: 150ms ease-in-out;
+        font-weight: 300;
+        transition: 350ms ease-in-out;
         margin-left: 7.5em;
+        background: $primary-color;
         &:hover{
-            background: $primary-color;
-            color: $color-white;
+            background: $color-white;
+            color: $primary-color;
             //font-weight: 500;
         }
     }
