--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -3,6 +3,7 @@
     bottom: 3em;
     background: $primary-color;
     width: 90%;
+    max-width: 1400px;
     height: 11em;
     font-family: 'Montserrat', sans-serif;
     color: $color-white;
