--- a/scss/partials/_about.scss
+++ b/scss/partials/_about.scss
@@ -1,22 +1,37 @@
 .about{
     position: relative;
     width: 90%;
+    max-width: 1400px;
     height: 800px;
     background: $color-white;
     color: $primary-color;
-    padding: 2em 0;
+    padding: 0;
     margin: 0 auto;
     h1{
         font-size: $section-header;
-        font-weight: 300;
+        font-weight: 400;
         text-align: center;
+        background: $primary-color;
+        color: $color-white;
+        margin: 0 auto;
+        width: 300px;
+        height: 150px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: 200;
+        z-index: 100;
     }
     p{
         text-align: center;
         max-width: 1000px;
-        margin: 0 auto;
-        padding: 0 10%;
+        margin: -0.5em auto 0 auto;
+        padding: 3em 10%;
         font-size: 1.2em;
         font-weight: 300;
+        background: #dfdfdf;
+        z-index: 0;
+        -webkit-clip-path: polygon(50% 0%, 100% 10%, 100% 100%, 0 100%, 0 10%);
+        clip-path: polygon(50% 0%, 100% 10%, 100% 100%, 0 100%, 0 10%);
     }
 }
