--- a/scss/partials/_nav.scss
+++ b/scss/partials/_nav.scss
@@ -3,11 +3,11 @@
     margin: 0 auto 0 5%;
     padding: 0;
     width: 90%;
-    background: $primary-color;
+    background: rgba(68, 68, 68, 0.96);
     height: 70px;
     z-index: 100;
     position: fixed;
-   
+    //box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.7);
 }
 
 // social media outer
@@ -19,7 +19,7 @@
     justify-content: space-between;
     align-items: center;
     width: auto;
-    height: 65px;
+    height: 95px;
     margin: 0;
     padding: 0;
     left: 1em;
@@ -122,29 +122,33 @@
 // Desktop menu
 @media (min-width: 800px){
     .header_outer{
-        background: $primary-color;
+        //background: $color-grey;
         height: 100px;
     }
     .nav_outer{
         position: relative;
-        margin: 0 auto;
+        margin: 0;
         height: 100px;
         width: 100%;
+        //background: darksalmon;
         ul{
             height: 100%;
             flex-direction: row;
-            margin: 0 auto;
+            margin: 0 1em 0 0;
             background: none;
-            justify-content: space-around;
-            max-width: 550px;
+            float: right;
+            //justify-content: space-around;
+            max-width: 500px;
             padding: 0;
+            //background: sandybrown;
             li{
                 //background: cadetblue;
                 a{
                     opacity: 1;
                     padding: 0;
                     height: 100%;
-                    font-size: 0.9em;
+                    font-size: 0.8em;
+                    font-weight: 200;
                     //background: saddlebrown;
                     width: 100%;
                     //text-align: center;
