--- a/scss/partials/_services.scss
+++ b/scss/partials/_services.scss
@@ -1,5 +1,6 @@
 .services{
     width: 90%;
+    max-width: 1400px;
     height: auto;
     padding: 0;
     margin: 0 auto;
@@ -49,14 +50,14 @@
                 background-position: center;
                 background-repeat: no-repeat;
                 transition: 200ms ease-in-out;
-                transform: scale(1.0);
+                transform: scale(0.9);
                 box-sizing: border-box;
                 margin: 0;
                 &:hover,
                 :active,
                 :focus{
-                    transform: scale(0.95);
-                    box-shadow: inset 0px 0px 10px 1px rgba(0,0,0,0.75);
+                    transform: scale(1);
+                    box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.75);
                 }
                 &::before{
                     position: absolute;
