--- a/scss/partials/_nav.scss
+++ b/scss/partials/_nav.scss
@@ -3,7 +3,8 @@
     margin: 0 auto 0 5%;
     padding: 0;
     width: 90%;
-    background: rgba(68, 68, 68, 0.96);
+    //background: rgba(68, 68, 68, 0.96);
+    background: rgba(38, 38, 94, 0.95);
     height: 70px;
     z-index: 100;
     position: fixed;
