--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@ body {
   margin: 0 auto 0 5%;
   padding: 0;
   width: 90%;
-  background: rgba(68, 68, 68, 0.96);
+  background: rgba(38, 38, 94, 0.95);
   height: 70px;
   z-index: 100;
   position: fixed; }
@@ -391,7 +391,7 @@ body {
   position: relative;
   width: 90%;
   max-width: 1400px;
-  height: 800px;
+  height: auto;
   background: #f3f3f3;
   color: #26265e;
   padding: 0;
@@ -412,7 +412,6 @@ body {
     z-index: 100; }
   .about p {
     text-align: center;
-    max-width: 1000px;
     margin: -0.5em auto 0 auto;
     padding: 3em 10%;
     font-size: 1.2em;
@@ -421,6 +420,24 @@ body {
     z-index: 0;
     -webkit-clip-path: polygon(50% 0%, 100% 10%, 100% 100%, 0 100%, 0 10%);
     clip-path: polygon(50% 0%, 100% 10%, 100% 100%, 0 100%, 0 10%); }
+  .about .about_service--flexbox {
+    width: 100%;
+    max-width: 1200px;
+    height: auto;
+    padding: 2em 0;
+    margin: 0 auto;
+    position: relative;
+    display: flex;
+    flex-flow: wrap;
+    justify-content: center; }
+    .about .about_service--flexbox .about_service--box {
+      width: 300px;
+      height: 300px;
+      margin: 1em;
+      padding: 0;
+      background: #26265e;
+      -webkit-clip-path: polygon(50% 0%, 100% 10%, 100% 100%, 0 100%, 0 10%);
+      clip-path: polygon(50% 0%, 100% 10%, 100% 100%, 0 100%, 0 10%); }
 
 .contact {
   width: 90%;
@@ -528,26 +545,28 @@ body {
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        transition: 200ms ease-in-out;
-        transform: scale(0.9);
+        transition: 500ms ease-in-out;
+        transform: scale(1);
         box-sizing: border-box;
         margin: 0; }
         .services .services_flexbox .service .service_bg:hover,
         .services .services_flexbox .service .service_bg :active,
         .services .services_flexbox .service .service_bg :focus {
-          transform: scale(1);
+          transform: scale(1.1);
           box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.75); }
         .services .services_flexbox .service .service_bg::before {
           position: absolute;
           content: '';
           height: 100%;
-          width: 100%; }
+          width: 100%;
+          transition: 500ms ease-in; }
       .services .services_flexbox .service .service_text {
         position: relatives;
         height: auto;
         width: 45%;
         height: 100%;
         top: 0;
+        background: #dfdfdf;
         padding: 1em 0;
         margin: 0;
         color: #26265e;
