--- a/scss/partials/_about.scss
+++ b/scss/partials/_about.scss
@@ -2,7 +2,7 @@
     position: relative;
     width: 90%;
     max-width: 1400px;
-    height: 800px;
+    height: auto;
     background: $color-white;
     color: $primary-color;
     padding: 0;
@@ -24,7 +24,7 @@
     }
     p{
         text-align: center;
-        max-width: 1000px;
+        //max-width: 1000px;
         margin: -0.5em auto 0 auto;
         padding: 3em 10%;
         font-size: 1.2em;
@@ -33,5 +33,26 @@
         z-index: 0;
         -webkit-clip-path: polygon(50% 0%, 100% 10%, 100% 100%, 0 100%, 0 10%);
         clip-path: polygon(50% 0%, 100% 10%, 100% 100%, 0 100%, 0 10%);
+    }
+    .about_service--flexbox{
+        width: 100%;
+        max-width: 1200px;
+        height: auto;
+        padding: 2em 0;
+        margin: 0 auto;
+        position: relative;
+        display: flex;
+        flex-flow: wrap;
+        justify-content: center;
+        //background: salmon;
+        .about_service--box{
+            width: 300px;
+            height: 300px;
+            margin: 1em;
+            padding: 0;
+            background: $primary-color;
+            -webkit-clip-path: polygon(50% 0%, 100% 10%, 100% 100%, 0 100%, 0 10%);
+            clip-path: polygon(50% 0%, 100% 10%, 100% 100%, 0 100%, 0 10%);
+        }
     }
 }
