--- a/scss/partials/_services.scss
+++ b/scss/partials/_services.scss
@@ -49,22 +49,23 @@
                 background-size: cover;
                 background-position: center;
                 background-repeat: no-repeat;
-                transition: 200ms ease-in-out;
-                transform: scale(0.9);
+                transition: 500ms ease-in-out;
+                transform: scale(1);
                 box-sizing: border-box;
                 margin: 0;
                 &:hover,
                 :active,
                 :focus{
-                    transform: scale(1);
+                    transform: scale(1.1);
                     box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.75);
+                    
                 }
                 &::before{
                     position: absolute;
                     content: '';
                     height: 100%;
                     width: 100%;
-                    //background: rgba(38, 38, 94, 0.3);
+                    transition: 500ms ease-in;
                 }
             }
             .service_text{
@@ -73,7 +74,7 @@
                 width: 45%;
                 height: 100%;
                 top: 0;
-                //background: rgba(38, 38, 94, 0.07);
+                background: #dfdfdf;
                 padding: 1em 0;
                 margin: 0;
                 color: $primary-color;
