--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,900|Spectral+SC:200,300,400,500,600,700");
-body {
+html, body {
   font-size: 16px;
   z-index: 0;
   padding: 0;
@@ -8,19 +8,8 @@ body {
   height: auto;
   color: #202020;
   font-family: 'Montserrat', sans-serif;
-  position: relative; }
-
-.body_outer {
-  top: 0;
-  width: 100%;
-  height: 100vh;
-  background-image: url(../images/grey_bg.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  margin: 0;
-  z-index: 0;
-  position: fixed; }
+  position: relative;
+  background: #26265e; }
 
 .facebook_icon,
 .facebook_icon::before,
@@ -143,7 +132,11 @@ body {
 
 @media (min-width: 800px) {
   .header_outer {
-    height: 100px; }
+    height: 100px;
+    max-width: 1400px;
+    margin: 0 auto;
+    left: 50%;
+    transform: translateX(-50%); }
   .nav_outer {
     position: relative;
     margin: 0;
@@ -306,13 +299,10 @@ body {
   flex-direction: column;
   background: #26265e;
   width: 50%;
-  top: 50%;
-  bottom: 0;
-  left: 0;
-  height: 250px;
+  top: 0;
+  height: 45%;
   padding: 0;
-  margin: auto;
-  transform: translateY(-30%); }
+  margin: auto; }
   .logo_outer .logo_primo {
     font-size: 7em;
     font-weight: 300;
@@ -367,21 +357,23 @@ body {
     font-size: 1.4em;
     border: 2px solid #f3f3f3;
     padding: 0.5em 1em;
+    border-radius: 30px;
     cursor: pointer;
     text-decoration: none;
     font-weight: 300;
     transition: 350ms ease-in-out;
     margin-left: 6em;
-    background: #26265e;
+    background: linear-gradient(to right, #53d681 0%, #91e842 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#53d681', endColorstr='#91e842', GradientType=1 );
     position: relative; }
     .showcase_quote_box .showcase_cta:hover {
-      background: #f3f3f3;
+      border: 2px solid #26265e;
       color: #26265e; }
     .showcase_quote_box .showcase_cta::before {
       content: '';
       display: block;
       position: absolute;
-      height: 5px;
+      height: 2px;
       width: 50px;
       right: -3em;
       bottom: 20px;
@@ -397,7 +389,7 @@ body {
   padding: 0;
   margin: 0 auto; }
   .about h1 {
-    font-size: 2em;
+    font-size: 1.8em;
     font-weight: 400;
     text-align: center;
     background: #26265e;
@@ -449,7 +441,7 @@ body {
   margin: 0 auto;
   color: #26265e; }
   .contact h1 {
-    font-size: 2em;
+    font-size: 1.8em;
     text-align: center;
     font-weight: 200;
     margin: 0;
@@ -510,7 +502,7 @@ body {
   padding: 3em 0 0 0;
   color: #26265e; }
   .services h1 {
-    font-size: 2em;
+    font-size: 1.8em;
     margin: 0 auto;
     padding: 1em 0;
     text-align: center;
