--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -1,4 +1,4 @@
-body{
+html,body{
     font-size: 16px;
     z-index: 0;
     padding: 0;
@@ -8,21 +8,9 @@ body{
     color: $color-black;
     font-family: 'Montserrat', sans-serif;
     position: relative;
+    background: $primary-color;
 }
-.body_outer{
-    top: 0;
-    width: 100%;
-    height: 100vh;
-    background-image: url(../images/grey_bg.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    margin: 0;
-    z-index: 0;
-    //background: $primary-color;
-    //position: absolute;
-    position: fixed;
-}
+
 
 // Facebook icon
 .facebook_icon,
