--- a/scss/partials/_showcase.scss
+++ b/scss/partials/_showcase.scss
@@ -38,15 +38,15 @@
     flex-direction: column;
     background: $primary-color;
     width: 50%;
-    top: 50%;
+    top: 0;
     //right: 0;
-    bottom: 0;
-    left: 0;
+    //bottom: 100px;
+    //left: 0;
     //max-width: 600px;
-    height: 250px;
+    height: 45%;
     padding: 0;
     margin: auto;
-    transform: translateY(-30%);
+    //transform: translateY(-80%);
     
 
     .logo_primo{
@@ -111,15 +111,18 @@
         font-size: 1.4em;
         border: 2px solid $color-white;
         padding: 0.5em 1em;
+        border-radius: 30px;
         cursor: pointer;
         text-decoration: none;
         font-weight: 300;
         transition: 350ms ease-in-out;
         margin-left: 6em;
-        background: $primary-color;
+        background: linear-gradient(to right, rgba(83,214,129,1) 0%, rgba(145,232,66,1) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#53d681', endColorstr='#91e842', GradientType=1 );;
         position: relative;
         &:hover{
-            background: $color-white;
+            border: 2px solid $primary-color;
+            //background: $color-white;
             color: $primary-color;
             //font-weight: 500;
         }
@@ -127,7 +130,7 @@
             content: '';
             display: block;
             position: absolute;
-            height: 5px;
+            height: 2px;
             width: 50px;
             right: -3em;
             bottom: 20px;
